tests/suite/snapshots/suite__parse__tests__parse__length02-2.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/length02-2.xi:2:14]
   │
 2 │   a = length()
   ·              ┬  
   ·              ╰── Unexpected token
───╯

